Fixed footer cutting off content

--- a/css/homeCSS.css
+++ b/css/homeCSS.css
@@ -184,12 +184,19 @@ input[type="submit"]:hover {
 
 /* Footer css for each page */
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+}
 
